feat: complete swagger docs
