# cmd/api/feed.go
@@ -6,6 +6,23 @@ import (
 	"github.com/temideewan/go-social/internal/store"
 )
 
+// CreatePost godoc
+//
+//	@Summary		Fetches the user feed
+//	@Description	Fetches the user feed
+//	@Tags			feed
+//	@Accept			json
+//	@Produce		json
+//	@Param			since	query		string	false	"Since"
+//	@Param			until	query		string	false	"Until"
+//	@Param			limit	query		string	false	"Limit"
+//	@Param			sort	query		string	false	"Sort"
+//	@Param			tags	query		string	false	"Tags"
+//	@Param			search	query		string	false	"Search"
+//	@Success		200		{object}	[]store.PostWithMetadata
+//	@Failure		500		{object}	error
+//	@Security		ApiKeyAuth
+//	@Router			/feed [get]
 func (app *application) getUserFeedHandler(w http.ResponseWriter, r *http.Request) {
 	// pagination, filters, sort
 	fq := store.PaginatedFeedQuery{
